# revisor-contratual

./: .dockerignore  .env.example  .gitignore  CNAME  Dockerfile  README-DOCKER.md  README.md  _headers  docker-compose.app.yml  docker-compose.prod.yml  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
bloco_audit/: __init__.py  chain.py  genesis.py
bloco_auth/: __init__.py  analytics.py  api.py  audit_isolation.py  byok_api.py  byok_encryption.py  byok_lifecycle.py  byok_middleware.py  db.py  dpa.py  jwt_utils.py  middleware.py  models.py  onboarding.py  passwords.py  tos.py
bloco_backup/: __init__.py  scheduler.py
bloco_contratos/: __init__.py  contrato.py  imobiliario_schema.py  jurisprudencia.py  personas.py
bloco_database/: __init__.py
bloco_database/migrations/: sp04_001_auth_multitenant.sql  sp04_002_byok_keys.sql  sp04_003_lgpd_tos_audit.sql  sp05_001_analytics_events.sql  sp06_001_imobiliario_contract_data.sql
bloco_dataset/: __init__.py  auto_trigger.py  scraper_tema_1378.py  tema_1378_state.py
bloco_engine/: __init__.py
bloco_engine/bacen/: __init__.py  client.py  codigos_bacen.yaml
bloco_engine/ferramentas_calculo/: __init__.py  anatocismo.py  price.py
bloco_engine/parsing/: __init__.py  exceptions.py  fidelity.py  marker_parser.py  ocrmypdf_parser.py  orchestrator.py  pymupdf_parser.py  subprocess_runner.py  tesseract_direct_parser.py  type_detector.py
bloco_engine/pdf/: __init__.py  render.py
bloco_interface/: __init__.py  analytics_cli.py  cli.py  error_handler.py  ollama_manager.py  output.py  streamlit_app.py  streamlit_tokens.css
bloco_interface/web/: __init__.py  app.py  auth.py  error_handler.py
bloco_lgpd/: __init__.py  encryption.py  headers.py  permissions.py
bloco_vault/: __init__.py  busca.py  data_schema.py  embedder.py  populate.py  repository.py  schema.py
bloco_vault/data/: DATASET-CHANGELOG.md  sumulas-stf-vinculantes.json  sumulas-stj.json
bloco_vault/scrapers/: __init__.py  base.py  stf_sumulas_vinculantes.py  stj_sumulas.py
bloco_workflow/: __init__.py  orchestrator.py  pipeline.py
bloco_workflow/personas/: __init__.py  advogado.py  economista.py  juiz.py  llm_factory.py  redator.py
docs/: sop-monitoramento-tema-1378.md  sop-populate-vault.md  sop-refresh-vault-dataset.md  sop-revisar-pdf.md  sop-rotacao-auth-cookie-key.md
governance/: .project.yaml  CHANGELOG-v0.2.0.md  CHANGELOG-v0.2.10.0.md  CHECKPOINT-active.md  CHECKPOINT-history-phase-0.md  CHECKPOINT-history-phase-1.md  PROJECT-CHECKPOINT.md  PROJECT-STATUS-NEXT-SESSION-2026-05-16.md  README.md  SMOKE-E2E-V0.3.0-INSTRUCTIONS.md  TECH-DEBT.md  design-spec-fastapi-htmx-ui.md  orsheva-brandbook.html  runbook-backup-restore.md  sprint-02-plan.md  ux-spec-v1.1.2-MVP-LEAN.md  ux-spec-v2.0.0-DRAFT.md
governance/.claude/: settings.local.json
governance/architecture/: ADR-INDEX.md  refactor-plan-2026-05-14.md  sprint-7-memory-optimization-feasibility-2026-05-15.md
governance/decisions/: architecture-D-lean-2026-05-01.md  decisions-consolidated-2026-05-01.md  quality-data-modularity-assurance-2026-05-01.md  requirements-extended-2026-05-01.md  risk-analysis-13-decisions-2026-05-01.md  sprint-6-aggressive-premortem-2026-05-14.md  vault-curation-and-hardware-strategy-2026-05-01.md
governance/design/: wireframe-variant-imobiliario-2026-05-13.md
governance/prd/: BRIEF-EXECUTAVEL-ADVOGADO.md  INDEX.md  PREENCHIMENTO-ADVOGADO-2026-05-12-FINAL.md  integrations-detail-v1.0.md  prd-sp06-bloco-gamma-peca-revisional-ai-v0.1.0.md  prd-v1.0.1.md  prd-v1.0.2.md  prd-v1.0.3-DELTA.md  prd-v1.1.0-MAJOR.md  prd-v1.1.1-PATCH.md  prd-v1.1.2-PATCH.md  prd-v2.0.0-DRAFT.md  prd-v2.0.1-DOCTYPE-CONTENT-PATCH.md  prd-v2.0.5.0-PATCH-ANALYTICS-EIXO-5.md  ux-spec-detail-v1.0.md
governance/qa/: adversarial-review-story-mvp-lean-01-cc29.md  checkpoint-governance-mini-review-etapa-2.2.md  checkpoint-governance-rereview-etapa-1.3.md  checkpoint-governance-review-etapa-1.1.md  checkpoint-governance-review-etapa-2.1.md  hamann-board-session-2026-05-09-sprint04-pre-merge-recovery.md  handoff-eric-advogada-externa-bloco-gamma-2026-05-14.md  keymaker-validate-bloco-beta-4-stories-2026-05-14.md  keymaker-validate-bloco-gamma-4-stories-2026-05-14.md  keymaker-validate-sprint-6-1-5-stories-2026-05-14.md  keymaker-validate-sprint-6-2-single-story-2026-05-14.md  morpheus-fechamento-sessao-22-ordem-11.md  morpheus-fechamento-sessao-28-ordem-11.md  morpheus-fechamento-sessao-34-ordem-11.md  morpheus-fechamento-sessao-72-ordem-12.md  morpheus-fechamento-sessao-75-ordem-13.md  morpheus-fechamento-sessao-78-ordem-14.md  morpheus-fechamento-sessao-80-ordem-15.md  morpheus-fechamento-sessao-82-ordem-16.md  morpheus-fechamento-sessao-92-ordem-17.md  morpheus-fechamento-sessao-92-ordem-18.md  morpheus-route-sprint-5-remaining-2026-05-13.md  oracle-fidelity-bloco-gamma-2026-05-14.md  oracle-g5-gate-td-sp04-04-analytics.md  oracle-g5-quality-gate-bloco-3-imobiliario.md  oracle-g5b-re-gate-post-patch-bloco-3-imobiliario.md  oracle-gate-g5-bloco-beta-2026-05-14.md  qa-gate-sprint-6-x-consolidation-2026-05-15.md  qa-gate-stories-1-4-fase-3.0.md  qa-gate-story-10-cli.md  qa-gate-story-11-pr-merge-review.md  qa-gate-story-12-ci-cd.md  qa-gate-story-13-hardening.md  qa-gate-story-14-docs.md  qa-gate-story-5-sub-a-bacen.md  qa-gate-story-6-sub-b-parsing.md  qa-gate-story-7-sub-d-personas-llm.md  qa-gate-story-8-sub-c-vault.md  qa-gate-story-9-integracao-e2e.md  qa-gate-story-docs-02-readme-sops-adr-010.md  (+75 more)
governance/research/: byok-saas-multitenant-pricing-v2.md  competitor-analysis-2026-05-01.md  data-sources-external-integrations-2026-05-01.md  module-by-module-deep-dive-2026-04-30.md  openrouter-vision-ocr-viability.md  phase-1-3-lows-cataloging-2026-05-16.md  state-of-the-art-2026-04-30.md
governance/retrospectives/: sprint-7-retrospective.md
governance/sprints/: sprint-8-scope.md
landing/: README.md  _redirects  robots.txt  styles.css  tokens.css
prompts/: imobiliario_v1.0.0.md
scripts/: generate_test_pdfs.py  oracle_smoke_fidelity_bloco_gamma.py
(+178 files in other folders)
