[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revisor-contratual"
version = "0.1.0"
description = "Sistema LEAN local de revisão jurídica de contratos bancários — single-process Python, 2 LLMs paralelos, 100% on-premise (LGPD)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Eric Claudino", email = "eric@claudinoinsights.com" }]
keywords = ["legaltech", "revisional", "bancario", "lgpd", "decimal", "ollama"]

dependencies = [
  # UI Web (FastAPI + HTMX + Jinja2 — substituiu Streamlit em REV-INT-01)
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.20",
  # Orquestração + LLM (PATCH F-MIN-02: pinning ainvoke async nativo)
  "langchain>=0.3",
  "langgraph>=0.2",
  "langchain-ollama>=0.2.0",
  # Vault: vec + hybrid search
  "sqlite-vec>=0.1",
  "sentence-transformers>=3.0",
  "rank_bm25>=0.2",
  # NLI híbrido (ADR-004)
  "transformers>=4.40",
  "torch>=2.2",  # CPU build no laptop alvo
  # Parsing PDF (com OCR opcional)
  "pymupdf4llm>=0.0.12",
  "pdf2image>=1.17",  # ADR-006: preview server-side
  # Scraper HTML (vault — STORY 8 SUB-C)
  "beautifulsoup4>=4.12",
  # BACEN
  "python-bcb>=0.3",  # PyPI max é 0.3.6; suite mocks via sgs_fetcher injection (nunca importa bcb real)
  "pyyaml>=6.0",
  # Modelos & util
  "pydantic[email]>=2.8",  # Sprint 04: EmailStr para validação onboarding (SP04-AUTH-01 AC-01)
  "tenacity>=9.0",
  "diskcache>=5.6",
  "structlog>=24.4",
  # Renderização de peças
  "jinja2>=3.1",
  "weasyprint>=63.0",
  # HTTP
  "httpx>=0.27",
  # CLI (STORY 10)
  "click>=8.1",
  "rich>=13.0",
  # Auto-Ollama lifecycle (OLLAMA-MGR-01 / ADR-011) — process management cross-platform
  "psutil>=5.9",
  # Auth básica (MVP-LEAN-01 Task 2 / FR-LGPD-MVP-01a) — bcrypt password hashing + itsdangerous SessionMiddleware
  "bcrypt>=4.0",
  "itsdangerous>=2.0",
  # MVP-LEAN-01 Task 8 — LGPD L4 encryption-at-rest + APScheduler backup
  "cryptography>=41",
  "apscheduler>=3.10",
  # Sprint 04 Cloud SaaS BYOK — multi-tenant auth (SP04-AUTH-01 / ADR-017 BACKBONE + ADR-019 DPA)
  "sqlalchemy[asyncio]>=2.0",  # ORM async para PostgreSQL multi-tenant
  "asyncpg>=0.29",             # driver PostgreSQL async (SQLAlchemy 2.0 async engine)
  "pyjwt[crypto]>=2.8",        # JWT HS256 — login token com tenant_id/user_id claims (FR-AUTH-03)
  # NOTE: passlib droppado — incompat passlib 1.7.4 ↔ bcrypt>=4.0 (__about__ removido).
  # SP04 password hashing usa raw `bcrypt>=4.0` (já em deps Sprint 03 acima).
  # Sprint 04 BYOK Anthropic (SP04-BYOK-01 / ADR-014 + Tank Phase 12.3a)
  "anthropic>=0.40",           # Anthropic SDK Python oficial (BYOK runtime injection)
  # NOTE: apscheduler já presente acima (Sprint 03 LGPD backup); SP04-BYOK-01 usa
  # pg_cron primary (Tank decision Item 2). APScheduler fallback Sprint 06+ TD-SP04-04
  # se deployment final não suportar pg_cron extension.
]

[project.optional-dependencies]
# ADR-034 (D-DEV-S08-013): Tesseract Direct (pdf2image + pytesseract) substitui
# OCRmyPDF eliminando dependência Ghostscript (D-OPS-S08-028).
# Debian bookworm gs 10.0.0 regression bloqueava OCRmyPDF em múltiplos paths
# internos. Escape definitivo: pipeline direto pdf2image (poppler) + pytesseract.
# pdf2image>=1.17 já em deps base. ocrmypdf + marker preserved como emergency rollback.
ocr = ["pytesseract>=0.3.10", "ocrmypdf>=16.0", "marker-pdf>=0.2"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
# CLIs documentados em ADRs
revisor = "bloco_interface.cli:main"
revisor-web = "bloco_interface.web.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "bloco_contratos*",
  "bloco_interface*",
  "bloco_workflow*",
  "bloco_vault*",
  "bloco_engine*",
  "bloco_audit*",
  "bloco_learning*",
  "bloco_auth*",       # Sprint 04 SP04-AUTH-01: multi-tenant authentication + onboarding
  "bloco_database*",   # Sprint 04: PostgreSQL migrations + connection pool
]
exclude = ["tests*"]

# Decimal everywhere — float é PROIBIDO em bloco_engine/ferramentas_calculo/
# Enforce via CI lint (NFR-MAINT-02 + FR-CALC-01)
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ANN", "ASYNC"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = ["-q", "--strict-markers", "--cov-report=term-missing"]
markers = [
  "smoke: validações operacionais (paralelismo LLM, etc) — ADR-003 PATCH 2",
  "unit: testes unitários puros",
  "integration: testes de integração entre blocos",
]

[tool.coverage.run]
source = [
  "bloco_contratos",
  "bloco_workflow",
  "bloco_vault",
  "bloco_engine",
  "bloco_audit",
  "bloco_learning",
  "bloco_auth",       # Sprint 04 SP04-AUTH-01
  "bloco_database",   # Sprint 04 PostgreSQL foundation
]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
# NFR-MAINT-02: ≥80% bloco_engine, ≥70% workflow/vault, ≥60% geral
# Sprint 04 SP04-AUTH-01 AC-08: bloco_auth coverage ≥ 80% verificado
#   condicionalmente quando DATABASE_URL setada (integration tests passam);
#   sem DB tests skip → unit-only baseline ≥ 60% geral mantido (Sprint 03 compat)
fail_under = 60
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
